--- a/src/main/resources/com/example/gestionvoltunisair/gestion-vols.fxml
+++ b/src/main/resources/com/example/gestionvoltunisair/gestion-vols.fxml
@@ -34,7 +34,7 @@
                         <Insets right="20.0" />
                      </HBox.margin>
                   </Label>
-                  <Button fx:id="logoutButton" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 3;" text="Déconnexion" textFill="WHITE">
+                  <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#handleLogout" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 3;" text="Déconnexion" textFill="WHITE">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
@@ -47,12 +47,12 @@
    <left>
       <VBox prefHeight="640.0" prefWidth="200.0" style="-fx-background-color: #f0f0f0;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="dashboardButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false"  prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="Tableau de Bord">
+            <Button fx:id="dashboardButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="Tableau de Bord">
                <padding>
                   <Insets left="20.0" />
                </padding>
             </Button>
-            <Button fx:id="flightsButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #e0e0e0;" text="Gestion des Vols">
+            <Button fx:id="flightsButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#handleFlights" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #e0e0e0;" text="Gestion des Vols">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -60,12 +60,12 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Button>
-            <Button fx:id="aircraftButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false"  prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="Gestion des Avions">
+            <Button fx:id="aircraftButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#handleAircraft" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="Gestion des Avions">
                <padding>
                   <Insets left="20.0" />
                </padding>
             </Button>
-            <Button fx:id="crewButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false"  prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="Gestion des Équipages">
+            <Button fx:id="crewButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#handleCrew" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="Gestion des Équipages">
                <padding>
                   <Insets left="20.0" />
                </padding>
